style: add hidden overflow x to avoid scroll when in animation

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
     html {
       font-family: 'Source Code Pro', 'monospace';
       scroll-behavior: smooth;
+      overflow-x: hidden;
     }
     h1{
       font-family: 'Share Tech Mono', 'monospace';
